fix alignment problem

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -150,7 +150,7 @@ nav {
 /* Section Styling */
 section {
 
-    padding: 2em 1em 2em 1.4em;
+    padding: 2em 1em 2em 1.5em;
     margin-bottom: 5em;
     border-radius: 6px;
     width: 40em;
